# JIT-Compiler

pljit/: AST.cpp  AST.h  AST.hpp  ASTVisitor.h  ASTVisitor.hpp  CMakeLists.txt  CodeManager.cpp  CodeManager.h  CodeManager.hpp  CodeReference.cpp  CodeReference.h  CodeReference.hpp  EvaluationContext.cpp  EvaluationContext.h  EvaluationContext.hpp  OptimizationASTVisitor.cpp  OptimizationASTVisitor.h  OptimizationASTVisitor.hpp  ParseTree.cpp  ParseTree.h  ParseTree.hpp  ParseTreeVisitor.h  ParseTreeVisitor.hpp  Pljit.h  Pljit.hpp  PrintASTVisitor.cpp  PrintASTVisitor.hpp  PrintASTVistor.cpp  PrintASTVistor.h  PrintASTVistor.hpp  PrintParseTreeVisitor.cpp  PrintParseTreeVisitor.h  PrintParseTreeVisitor.hpp  TokenStream.cpp  TokenStream.h  TokenStream.hpp  main.cpp
pljit/lib/: CodeManager.cpp  CodeManager.h  CodeReference.cpp  LexicalAnalyzer.cpp  LexicalAnalyzer.h  ParseTree.cpp  ParseTree.h  TokenStream.cpp
pljit/management/: CodeManager.cpp  CodeManager.hpp  CodeReference.cpp  CodeReference.hpp
pljit/semantic/: AST.cpp  AST.hpp  ASTVisitor.hpp  EvaluationContext.cpp  EvaluationContext.hpp  OptimizationASTVisitor.cpp  OptimizationASTVisitor.hpp  PrintASTVisitor.hpp
pljit/syntax/: ParseTree.cpp  ParseTree.hpp  ParseTreeVisitor.hpp  PrintParseTreeVisitor.hpp  TokenStream.cpp  TokenStream.hpp
test/: CMakeLists.txt  TestAST.cpp  TestEvaluation.cpp  TestOptimization.cpp  TestParseTree.cpp  TestPljit.cpp  TestTokenStream.cpp
test/test_semantic/: TestAST.cpp  TestEvaluation.cpp  TestOptimization.cpp
test/test_syntax/: TestParseTree.cpp  TestTokenStream.cpp
(+1 files in other folders)
